# gpu-qubo-solver

./: LICENSE  README.md  run.sh
data/: block_encoding_10.mtx  block_encoding_20.mtx  block_encoding_30.mtx  coloring_g000072_qubo.mtx  coloring_g001055_qubo.mtx  coloring_g001291_qubo.mtx  coloring_g001511_qubo.mtx  coloring_g002206_qubo.mtx  maxcut_g000134_qubo.mtx  maxcut_g000538_qubo.mtx  maxcut_g000750_qubo.mtx  maxcut_g001046_qubo.mtx  maxcut_g001940_qubo.mtx  maxcut_g002768_qubo.mtx  one_hot_encoding_10.mtx  one_hot_encoding_20.mtx  one_hot_encoding_25.mtx
src/: CMakeLists.txt  cpu_brute_force.h  cuda_debug.h  cuda_timer.h  cuda_util.h  datatypes.h  gpu_brute_force.cu  gpu_brute_force.h  main.cpp  matrix.h  matrix_reader.h  qubo_brute_forcer.h  qubo_energy.h  state_vector.h  timer.h
src/cmake/: BundleDependencies.cmake.in
